--- a/app/src/main/res/layout/activity_assistir_video.xml
+++ b/app/src/main/res/layout/activity_assistir_video.xml
@@ -8,14 +8,17 @@
     android:padding="1dp"
     tools:context=".activity.AssistirVideo">
 
-    <android.mlite.component.CustomVideoView
-        android:id="@+id/videoView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <android.mlite.component.CustomVideoView
+            android:id="@+id/videoView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/completionControlsLayout"
